--- a/index.html
+++ b/index.html
@@ -42,16 +42,23 @@
         </div>
       </div>
     </header>
-    <section>
-      <div class="right-div">
-        <h2 class="right-title">Have no time to prepare <span class="food">food?</span></h2>
-        <p class="right-text">
+    <section class="section-one">
+      <div class="left-div">
+        <h2 class="left-title">
+          Have no time to prepare <span class="food">food?</span>
+        </h2>
+        <p class="left-text">
           Choose one of our plans, enter delivery time and enjoy delicious food
           without leaving your home!
         </p>
-        <div class="click-div">
+        <a href="#">
+          <div class="click-div">
             <p class="order">Order Food</p>
-        </div>
+          </div>
+        </a>
+      </div>
+      <div class="right-div">
+        <img class="pizza-one" src="images/pizza-one.png" alt="pizza-one">
       </div>
     </section>
   </body>
