add our food page

--- a/ourfood.html
+++ b/ourfood.html
@@ -42,36 +42,49 @@
         </div>
       </div>
     </header>
-    <section class="section-one">
-      <div class="section-div">
-        <div class="left-div">
-          <h2 class="left-title">
-            Have no time to prepare <span class="food">food?</span>
-          </h2>
-          <p class="left-text">
-            Choose one of our plans, enter delivery time and enjoy delicious
-            food without leaving your home!
-          </p>
-          <a href="#">
-            <div class="click-div">
-              <p class="order">Order Food</p>
-            </div>
-          </a>
-        </div>
-        <div class="right-div">
-          <img class="pizza-one" src="images/pizza-one.png" alt="pizza-one" />
-        </div>
+    <section class="ourfood-section">
+      <div class="leftdiv">
+        <img
+          class="ourfood-pic"
+          src="images/Mask Group 2.png"
+          alt="ourfood-pic"
+        />
       </div>
-      <div class="icons-div"></div>
-      <div class="three-icons">
-        <a href="https://twitter.com/">
-          <img class="twitter" src="images/Path 3.svg" alt="twitter" />
-        </a>
-        <a href="https://www.google.com/">
-          <img class="internet" src="images/Path 5.svg" alt="internet" />
-        </a>
-        <a href="https://www.instagram.com/">
-          <img class="instagram" src="images/Group 1.svg" alt="instagram" />
+      <div class="rght-div">
+        <h2 class="first-title">OUR FOOD</h2>
+        <div class="orange-div"></div>
+        <div class="small-div-one">
+          <a href="#"
+            ><img class="click" src="images/Group 6.svg" alt="click" />
+          </a>
+          <p class="text-one">Signature Pizzas</p>
+        </div>
+        <p class="description-one">
+          Choose one of our plans, enter delivery time.
+        </p>
+        <div class="small-div-two">
+          <a href="#"
+            ><img class="click" src="images/Group 6.svg" alt="click" />
+          </a>
+          <p class="text-one">Oven-Baked Subs</p>
+        </div>
+        <p class="description-one">
+          Choose one of our plans, enter delivery time and enjoy delicious food
+          without leaving your home!
+        </p>
+        <div class="small-div-three">
+          <a href="#"
+            ><img class="click" src="images/Group 6.svg" alt="click" />
+          </a>
+          <p class="text-one">Wings, Sides & More</p>
+        </div>
+        <p class="description-one">
+          Choose one of our plans, enter delivery time.
+        </p>
+        <a href="#">
+          <div class="click-div-second">
+            <p class="order">Order Food</p>
+          </div>
         </a>
       </div>
     </section>
