--- a/contact.html
+++ b/contact.html
@@ -38,26 +38,92 @@
           </div>
         </div>
         <div class="div-plan-line">
-          <h3 class="plan-title">PLANS</h3>
+          <h3 class="plan-title">CONTACT US</h3>
         </div>
       </div>
     </header>
-    <section class="plan-section">
-      <div class="plan-section-div">
-        <img class="pizzaone" src="images/Group 143.png" alt="pizzaone" />
-        <img class="pizzatwo" src="images/Group 142.png" alt="pizzatwo" />
-      </div>
-      <div class="big-div">
-        <a href="#">
-          <div class="click-div-second">
-            <p class="order">Order Food</p>
+    <section>
+      <div class="map-contacts-div">
+        <div class="contact-big-div">
+          <div class="submit-div">
+            <div class="label-div first-lbl">
+              <label for="label-one"></label>
+              <input
+                class="input-one"
+                type="text"
+                name="subj"
+                id="label-one"
+                placeholder="Full Name"
+              />
+            </div>
+            <div class="label-div">
+              <label for="label-one"></label>
+              <input
+                class="input-one"
+                type="text"
+                name="subj"
+                id="label-one"
+                placeholder="Phone No."
+              />
+            </div>
+            <div class="message-div">
+              <label for="textarea-label"></label>
+              <textarea
+                class="textarea-element"
+                name="mess"
+                id="textarea-label"
+                placeholder="message"
+              ></textarea>
+            </div>
+            <button class="button-div" type="submit">Submit</button>
           </div>
-        </a>
-        <a href="#">
-          <div class="click-div-second">
-            <p class="order">Order Food</p>
+        </div>
+        <div class="maps-div">
+          <div class="hint-div">
+            <div class="div-rgt">
+              <img
+                class="smallpic"
+                src="images/Rectangle 15.png"
+                alt="small-pic"
+              />
+            </div>
+            <div class="div-lft">
+              <h3>CONTACT</h3>
+              <ul>
+                <li>
+                  <a
+                    class="allinone"
+                    target="_blank"
+                    href="https://www.google.com/maps/place/Alexander+Kazbegi+Ave,+T'bilisi/@41.7249769,44.7515941,17z/data=!3m1!4b1!4m5!3m4!1s0x4044731edab7891f:0x69939b719aaed0b0!8m2!3d41.7249769!4d44.7537828"
+                  >
+                    Alexander Kazbegi Ave, T'bilisi
+                  </a>
+                </li>
+                <li>
+                  <a class="allinone" href="tel:593-53-09-08"
+                    >Telephone: +995 593 53 09 08</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="allinone"
+                    href="mailto:TasteOfPizza@gmail.com&subject=pizzas"
+                  >
+                    E-mail: TasteOfPizza@gmail.com</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
-        </a>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7933957257997!2d44.751594115436305!3d41.724976879234575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731edab7891f%3A0x69939b719aaed0b0!2sAlexander%20Kazbegi%20Ave%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1637313910358!5m2!1sen!2sge"
+            width="800"
+            height="230"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
       </div>
     </section>
     <footer>
