--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
             <nav class="nav-li">
               <ul class="ul-li">
                 <li class="lists">
-                  <a class="listing" href="about.html">ABOUT</a>
-                </li>
-                <li class="lists">
                   <a class="listing" href="ourfood.html">OUR FOOD</a>
                 </li>
                 <li class="lists">
@@ -62,8 +59,8 @@
           <img class="pizza-one" src="images/pizza-one.png" alt="pizza-one" />
         </div>
       </div>
-      <div class="icons-div"></div>
-      <div class="three-icons">
+      <!-- <div class="icons-div"></div> -->
+      <!-- <div class="three-icons">
         <a href="https://twitter.com/">
           <img class="twitter" src="images/Path 3.svg" alt="twitter" />
         </a>
@@ -73,7 +70,78 @@
         <a href="https://www.instagram.com/">
           <img class="instagram" src="images/Group 1.svg" alt="instagram" />
         </a>
-      </div>
+      </div> -->
     </section>
+    <footer>
+      <div class="footer-div">
+        <div class="footer-one">
+          <a href="index.html">
+            <h3 class="footer-title">TASTE OF PIZZA</h3>
+          </a>
+        </div>
+        <div class="footer-two">
+          <h3 class="three-titles">CONTACT</h3>
+          <ul>
+            <li class="li-last">
+              <a
+                class="all"
+                target="_blank"
+                href="https://www.google.com/maps/place/Alexander+Kazbegi+Ave,+T'bilisi/@41.7249769,44.7515941,17z/data=!3m1!4b1!4m5!3m4!1s0x4044731edab7891f:0x69939b719aaed0b0!8m2!3d41.7249769!4d44.7537828"
+              >
+                Alexander Kazbegi Ave, T'bilisi
+              </a>
+            </li>
+            <li class="li-last">
+              <a class="all" href="tel:593-53-09-08"
+                >Telephone: +995 593 53 09 08</a
+              >
+            </li>
+            <li class="li-last">
+              <a
+                class="all"
+                href="mailto:TasteOfPizza@gmail.com&subject=pizzas"
+              >
+                E-mail: TasteOfPizza@gmail.com</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer-three">
+          <h3 class="three-titles">MENU</h3>
+          <ul>
+            <li class="li-last">
+              <a class="all" href="ourfood.html">Our Food</a>
+            </li>
+            <li class="li-last">
+              <a class="all" href="plans.html">Plans</a>
+            </li>
+            <li class="li-last">
+              <a class="all" href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-four">
+          <h3 class="three-titles">Follow Us</h3>
+          <div class="icons-div">
+            <a href="https://www.facebook.com/">
+              <img class="facebook" src="images/Fill-4.svg" alt="facebook" />
+            </a>
+            <a href="https://twitter.com/">
+              <img class="twitter" src="images/Fill-1.svg" alt="twitter" />
+            </a>
+            <a href="https://www.google.com/">
+              <img class="google" src="images/Union 31.svg" alt="google" />
+            </a>
+            <a href="https://www.instagram.com/">
+              <img
+                class="instagram"
+                src="images/Union 32.svg"
+                alt="instagram"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
