--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
       <div class="background-image">
         <div class="header-div">
           <div class="rightdiv">
-            <h3 class="taste">TASTE</h3>
+            <h3 class="taste"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span></h3>
             <a class="logo-tag" href="index.html">
               <img class="logo" src="images/logo.png" alt="Logo" />
             </a>
             <span class="f">F</span>
-            <h3 class="pizza">PIZZA</h3>
+            <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </div>
           <div class="navigation-div">
             <nav class="nav-li">
@@ -115,22 +115,27 @@
               </ul>
             </div>
           </div>
+          <div class="map-current">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7933957257997!2d44.751594115436305!3d41.724976879234575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731edab7891f%3A0x69939b719aaed0b0!2sAlexander%20Kazbegi%20Ave%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1637313910358!5m2!1sen!2sge"
             width="800"
-            height="230"
+            height="300"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
           ></iframe>
         </div>
+        </div>
+      </div>
+      <div>
+        <img src="https://assets7.lottiefiles.com/packages/lf20_kwt1ale5.json" alt="">
       </div>
     </section>
     <footer>
       <div class="footer-div">
         <div class="footer-one">
           <a href="index.html">
-            <h3 class="footer-title">TASTE OF PIZZA</h3>
+            <h3 class="footer-title"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span> <span class="o">O</span><span class="f-two">F</span> P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </a>
         </div>
         <div class="footer-two">
