--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <div class="background-image">
         <div class="header-div">
           <div class="rightdiv">
-            <h3 class="taste">TASTE</h3>
+            <h3 class="taste"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span></h3>
             <a class="logo-tag" href="index.html">
               <img class="logo" src="images/logo.png" alt="Logo" />
             </a>
             <span class="f">F</span>
-            <h3 class="pizza">PIZZA</h3>
+            <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </div>
           <div class="navigation-div">
             <nav class="nav-li">
@@ -49,34 +49,22 @@
             Choose one of our plans, enter delivery time and enjoy delicious
             food without leaving your home!
           </p>
-          <a href="#">
             <div class="click-div">
+              <a href="#">
               <p class="order">Order Food</p>
+            </a>
             </div>
-          </a>
         </div>
         <div class="right-div">
           <img class="pizza-one" src="images/pizza-one.png" alt="pizza-one" />
         </div>
       </div>
-      <!-- <div class="icons-div"></div> -->
-      <!-- <div class="three-icons">
-        <a href="https://twitter.com/">
-          <img class="twitter" src="images/Path 3.svg" alt="twitter" />
-        </a>
-        <a href="https://www.google.com/">
-          <img class="internet" src="images/Path 5.svg" alt="internet" />
-        </a>
-        <a href="https://www.instagram.com/">
-          <img class="instagram" src="images/Group 1.svg" alt="instagram" />
-        </a>
-      </div> -->
     </section>
     <footer>
       <div class="footer-div">
         <div class="footer-one">
           <a href="index.html">
-            <h3 class="footer-title">TASTE OF PIZZA</h3>
+            <h3 class="footer-title"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span> <span class="o">O</span><span class="f-two">F</span> P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </a>
         </div>
         <div class="footer-two">
