--- a/ourfood.html
+++ b/ourfood.html
@@ -14,12 +14,12 @@
       <div class="background-image">
         <div class="header-div">
           <div class="rightdiv">
-            <h3 class="taste">TASTE</h3>
+            <h3 class="taste"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span></h3>
             <a class="logo-tag" href="index.html">
               <img class="logo" src="images/logo.png" alt="Logo" />
             </a>
             <span class="f">F</span>
-            <h3 class="pizza">PIZZA</h3>
+            <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </div>
           <div class="navigation-div">
             <nav class="nav-li">
@@ -51,18 +51,18 @@
         <h2 class="first-title">OUR FOOD</h2>
         <div class="orange-div"></div>
         <div class="small-div-one">
-          <a href="#"
-            ><img class="click" src="images/Group 6.svg" alt="click" />
-          </a>
+          <div class="click-one">
+            <img class="click" src="images/Group 5.svg" alt="click" />
+          </div>
           <p class="text-one">Signature Pizzas</p>
         </div>
         <p class="description-one">
           Choose one of our plans, enter delivery time.
         </p>
         <div class="small-div-two">
-          <a href="#"
-            ><img class="click" src="images/Group 6.svg" alt="click" />
-          </a>
+          <div class="click-one">
+            <img class="click" src="images/Group 5.svg" alt="click" />
+          </div>
           <p class="text-one">Oven-Baked Subs</p>
         </div>
         <p class="description-one">
@@ -70,19 +70,19 @@
           without leaving your home!
         </p>
         <div class="small-div-three">
-          <a href="#"
-            ><img class="click" src="images/Group 6.svg" alt="click" />
-          </a>
+          <div class="click-one">
+            <img class="click" src="images/Group 5.svg" alt="click" />
+          </div>
           <p class="text-one">Wings, Sides & More</p>
         </div>
         <p class="description-one">
           Choose one of our plans, enter delivery time.
         </p>
-        <a href="#">
           <div class="click-div-second">
+            <a href="#">
             <p class="order">Order Food</p>
+          </a>
           </div>
-        </a>
       </div>
     </section>
 
@@ -90,7 +90,7 @@
       <div class="footer-div">
         <div class="footer-one">
           <a href="index.html">
-            <h3 class="footer-title">TASTE OF PIZZA</h3>
+            <h3 class="footer-title"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span> <span class="o">O</span><span class="f-two">F</span> P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </a>
         </div>
         <div class="footer-two">
