--- a/plans.html
+++ b/plans.html
@@ -14,12 +14,12 @@
       <div class="background-image">
         <div class="header-div">
           <div class="rightdiv">
-            <h3 class="taste">TASTE</h3>
+            <h3 class="taste"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span></h3>
             <a class="logo-tag" href="index.html">
               <img class="logo" src="images/logo.png" alt="Logo" />
             </a>
             <span class="f">F</span>
-            <h3 class="pizza">PIZZA</h3>
+            <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </div>
           <div class="navigation-div">
             <nav class="nav-li">
@@ -48,23 +48,23 @@
         <img class="pizzatwo" src="images/Group 142.png" alt="pizzatwo" />
       </div>
       <div class="big-div">
-        <a href="#">
           <div class="click-div-second">
+            <a href="#">
             <p class="order">Order Food</p>
+          </a>
           </div>
-        </a>
-        <a href="#">
           <div class="click-div-second">
+            <a href="#">
             <p class="order">Order Food</p>
+          </a>
           </div>
-        </a>
       </div>
     </section>
     <footer>
       <div class="footer-div">
         <div class="footer-one">
           <a href="index.html">
-            <h3 class="footer-title">TASTE OF PIZZA</h3>
+            <h3 class="footer-title"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span> <span class="o">O</span><span class="f-two">F</span> P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </a>
         </div>
         <div class="footer-two">
