--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="div-plan-line">
-          <h3 class="plan-title">CONTACT US</h3>
+          <h3 class="plan-title"><span class="c">C</span><span class="o">o</span><span class="n">n</span><span class="t">t</span><span class="a">a</span><span class="c">c</span><span class="t">t</span> <span class="u">U</span><span class="s">s</span></h3>
         </div>
       </div>
     </header>
