--- a/plans.html
+++ b/plans.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="div-plan-line">
-          <h3 class="plan-title">PLANS</h3>
+          <h3 class="plan-title"> <span class="p">P</span><span class="l">L</span><span class="a">A</span><span class="n">N</span><span class="s">S</span></h3>
         </div>
       </div>
     </header>
