--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/09e29573af.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="images/pizza.png" />
     <title>Taste of Pizza</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css">
+    
   </head>
   <body>
     <header>
@@ -21,7 +24,7 @@
             <span class="f">F</span>
             <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
           </div>
-          <div class="navigation-div">
+          <div class="navigation-div" id="navigationBlock">
             <nav class="nav-li">
               <ul class="ul-li">
                 <li class="lists">
@@ -36,8 +39,11 @@
               </ul>
             </nav>
           </div>
+          <div class="toggle-button" id="BurgerIcon">
+            <i class="fas fa-bars"></i>
+          </div>
+          </div>
         </div>
-      </div>
     </header>
     <section class="section-one">
       <div class="section-div">
@@ -131,5 +137,6 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
