--- a/index.html
+++ b/index.html
@@ -4,25 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/09e29573af.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="images/pizza.png" />
+    <meta name="description" content="Taste Of Pizza" />
+    <meta name="keywords" content="pizza, taste, delicious, food" />
+    <meta name="author" content="Irakli Dgebuadze" />
+    <!-- Facebook meta tags -->
+    <meta
+      property="og:url"
+      content="ak githutbis linki unda chavagdo rac gamochndeba linki igive"
+    />
+    <meta property="og:type" content="Fast Food" />
+    <meta property="og:title" content="Taste Of Pizza" />
+    <meta property="og:description" content="Have no time to prepare food?" />
+    <meta
+      property="og:image"
+      content="https://img.onmanorama.com/content/dam/mm/en/food/features/images/2021/10/17/pizza.jpg"
+    />
     <title>Taste of Pizza</title>
+    <script
+      src="https://kit.fontawesome.com/09e29573af.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css">
-    
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <header>
       <div class="background-image">
         <div class="header-div">
           <div class="rightdiv">
-            <h3 class="taste"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span></h3>
+            <h3 class="taste">
+              <span class="t">T</span><span class="a">A</span
+              ><span class="s">S</span><span class="t">T</span
+              ><span class="e">E</span>
+            </h3>
             <a class="logo-tag" href="index.html">
               <img class="logo" src="images/logo.png" alt="Logo" />
             </a>
             <span class="f">F</span>
-            <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
+            <h3 class="pizza">
+              <span class="p">P</span><span class="i">I</span
+              ><span class="z">Z</span><span class="z-two">Z</span
+              ><span class="a">A</span>
+            </h3>
           </div>
           <div class="navigation-div" id="navigationBlock">
             <nav class="nav-li">
@@ -42,8 +67,8 @@
           <div class="toggle-button" id="BurgerIcon">
             <i class="fas fa-bars"></i>
           </div>
-          </div>
         </div>
+      </div>
     </header>
     <section class="section-one">
       <div class="section-div">
@@ -55,11 +80,11 @@
             Choose one of our plans, enter delivery time and enjoy delicious
             food without leaving your home!
           </p>
-            <div class="click-div">
-              <a href="#">
+          <div class="click-div">
+            <a href="#">
               <p class="order">Order Food</p>
             </a>
-            </div>
+          </div>
         </div>
         <div class="right-div">
           <img class="pizza-one" src="images/pizza-one.png" alt="pizza-one" />
@@ -70,7 +95,14 @@
       <div class="footer-div">
         <div class="footer-one">
           <a href="index.html">
-            <h3 class="footer-title"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span> <span class="o">O</span><span class="f-two">F</span> P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
+            <h3 class="footer-title">
+              <span class="t">T</span><span class="a">A</span
+              ><span class="s">S</span><span class="t">T</span
+              ><span class="e">E</span> <span class="o">O</span
+              ><span class="f-two">F</span><span class="p">P</span
+              ><span class="i">I</span><span class="z">Z</span
+              ><span class="z-two">Z</span><span class="a">A</span>
+            </h3>
           </a>
         </div>
         <div class="footer-two">
@@ -124,12 +156,12 @@
               <img class="twitter" src="images/Fill-1.svg" alt="twitter" />
             </a>
             <a href="https://www.google.com/">
-              <img class="google" src="images/Union 31.svg" alt="google" />
+              <img class="google" src="images/Union-two.svg" alt="google" />
             </a>
             <a href="https://www.instagram.com/">
               <img
                 class="instagram"
-                src="images/Union 32.svg"
+                src="images/Union-one.svg"
                 alt="instagram"
               />
             </a>
