--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="images/pizza.png" />
+    <meta name="description" content="Taste Of Pizza" />
+    <meta name="keywords" content="pizza, taste, delicious, food" />
+    <meta name="author" content="Irakli Dgebuadze" />
+    <!-- Facebook meta tags -->
+    <meta
+      property="og:url"
+      content="ak githutbis linki unda chavagdo rac gamochndeba linki igive"
+    />
+    <meta property="og:type" content="Fast Food" />
+    <meta property="og:title" content="Taste Of Pizza" />
+    <meta property="og:description" content="Have no time to prepare food?" />
+    <meta
+      property="og:image"
+      content="https://img.onmanorama.com/content/dam/mm/en/food/features/images/2021/10/17/pizza.jpg"
+    />
     <title>Taste of Pizza</title>
+    <script
+      src="https://kit.fontawesome.com/09e29573af.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <header>
       <div class="background-image">
         <div class="header-div">
           <div class="rightdiv">
-            <h3 class="taste"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span></h3>
+            <h3 class="taste">
+              <span class="t">T</span><span class="a">A</span
+              ><span class="s">S</span><span class="t">T</span
+              ><span class="e">E</span>
+            </h3>
             <a class="logo-tag" href="index.html">
               <img class="logo" src="images/logo.png" alt="Logo" />
             </a>
             <span class="f">F</span>
-            <h3 class="pizza"><span class="p">P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
+            <h3 class="pizza">
+              <span class="p">P</span><span class="i">I</span
+              ><span class="z">Z</span><span class="z-two">Z</span
+              ><span class="a">A</span>
+            </h3>
           </div>
-          <div class="navigation-div">
+          <div class="navigation-div" id="navigationBlock">
             <nav class="nav-li">
               <ul class="ul-li">
                 <li class="lists">
@@ -36,9 +64,18 @@
               </ul>
             </nav>
           </div>
+          <div class="toggle-button" id="BurgerIcon">
+            <i class="fas fa-bars"></i>
+          </div>
         </div>
         <div class="div-plan-line">
-          <h3 class="plan-title"><span class="c">C</span><span class="o">o</span><span class="n">n</span><span class="t">t</span><span class="a">a</span><span class="c">c</span><span class="t">t</span> <span class="u">U</span><span class="s">s</span></h3>
+          <h3 class="plan-title">
+            <span class="c">C</span><span class="o">o</span
+            ><span class="n">n</span><span class="t">t</span
+            ><span class="a">a</span><span class="c">c</span
+            ><span class="t">t</span> <span class="u">U</span
+            ><span class="s">s</span>
+          </h3>
         </div>
       </div>
     </header>
@@ -57,12 +94,12 @@
               />
             </div>
             <div class="label-div">
-              <label for="label-one"></label>
+              <label for="label-two"></label>
               <input
                 class="input-one"
                 type="text"
                 name="subj"
-                id="label-one"
+                id="label-two"
                 placeholder="Phone No."
               />
             </div>
@@ -83,7 +120,7 @@
             <div class="div-rgt">
               <img
                 class="smallpic"
-                src="images/Rectangle 15.png"
+                src="images/Rectangle-one-five.png"
                 alt="small-pic"
               />
             </div>
@@ -116,26 +153,35 @@
             </div>
           </div>
           <div class="map-current">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7933957257997!2d44.751594115436305!3d41.724976879234575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731edab7891f%3A0x69939b719aaed0b0!2sAlexander%20Kazbegi%20Ave%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1637313910358!5m2!1sen!2sge"
-            width="800"
-            height="300"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-          ></iframe>
-        </div>
+            <iframe
+              class="iframe"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7933957257997!2d44.751594115436305!3d41.724976879234575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044731edab7891f%3A0x69939b719aaed0b0!2sAlexander%20Kazbegi%20Ave%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1637313910358!5m2!1sen!2sge"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
         </div>
       </div>
       <div>
-        <img src="https://assets7.lottiefiles.com/packages/lf20_kwt1ale5.json" alt="">
+        <img
+          src="https://assets7.lottiefiles.com/packages/lf20_kwt1ale5.json"
+          alt=""
+        />
       </div>
     </section>
     <footer>
       <div class="footer-div">
         <div class="footer-one">
           <a href="index.html">
-            <h3 class="footer-title"><span class="t">T</span><span class="a">A</span><span class="s">S</span><span class="t">T</span><span class="e">E</span> <span class="o">O</span><span class="f-two">F</span> P</span><span class="i">I</span><span class="z">Z</span><span class="z-two">Z</span><span class="a">A</span></h3>
+            <h3 class="footer-title">
+              <span class="t">T</span><span class="a">A</span
+              ><span class="s">S</span><span class="t">T</span
+              ><span class="e">E</span> <span class="o">O</span
+              ><span class="f-two">F</span> <span>P</span
+              ><span class="i">I</span><span class="z">Z</span
+              ><span class="z-two">Z</span><span class="a">A</span>
+            </h3>
           </a>
         </div>
         <div class="footer-two">
@@ -189,12 +235,12 @@
               <img class="twitter" src="images/Fill-1.svg" alt="twitter" />
             </a>
             <a href="https://www.google.com/">
-              <img class="google" src="images/Union 31.svg" alt="google" />
+              <img class="google" src="images/Union-one.svg" alt="google" />
             </a>
             <a href="https://www.instagram.com/">
               <img
                 class="instagram"
-                src="images/Union 32.svg"
+                src="images/Union-two.svg"
                 alt="instagram"
               />
             </a>
@@ -202,5 +248,6 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
