--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Facebook meta tags -->
     <meta
       property="og:url"
-      content="ak githutbis linki unda chavagdo rac gamochndeba linki igive"
+      content="https://irakli2896.github.io/Final-project-/"
     />
     <meta property="og:type" content="Fast Food" />
     <meta property="og:title" content="Taste Of Pizza" />
