add new phone number correctly

--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
               </a>
             </li>
             <li class="li-last">
+              <p class="all"> Telephone:
               <a class="all" href="tel:593-53-09-08"
-                >Telephone: +995 593 53 09 08</a
+                >+995 593 53 09 08</a
               >
+              </p>
             </li>
             <li class="li-last">
               <a
