--- a/contact.html
+++ b/contact.html
@@ -137,9 +137,11 @@
                   </a>
                 </li>
                 <li>
+                  <p class="allinone"> Telephone: 
                   <a class="allinone" href="tel:593-53-09-08"
-                    >Telephone: +995 593 53 09 08</a
+                    >+995 593 53 09 08</a
                   >
+                </p>
                 </li>
                 <li>
                   <a
@@ -197,9 +199,11 @@
               </a>
             </li>
             <li class="li-last">
+              <p class="all"> Telephone: 
               <a class="all" href="tel:593-53-09-08"
-                >Telephone: +995 593 53 09 08</a
+                >+995 593 53 09 08</a
               >
+              </p>
             </li>
             <li class="li-last">
               <a
